# ADMM-mTRF

./: README.md  pyproject.toml
example/: example.py  example_lambda.py  example_timing.py
src/ADMM_mTRF/: model.py
