[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ADMM_mTRF"
version = "0.1"
authors = [
  { name="Amir Khalilian", email="akg404@nyu.edu" },
]
description = "A fast implementation of multivariate temporal response function (mTRF) model with elastic net regularization."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [ "numpy", "scipy", "matplotlib", "mat73", "pandas", "deprecated", "scikit-learn", "naplib", "mtrf", "PyWavelets"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/amirhkhalilian/ADMM_mTRF"
"Bug Tracker" = "https://github.com/amirhkhalilian/ADMM_mTRF/issues"
